// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Alert snapshot Matches snapshot with default props 1`] = `
<DocumentFragment>
  <div
    class="w-full items-center gap-3 rounded p-1 flex transition-all duration-300 ease-in-out bg-error1 text-error5 max-h-[60px] opacity-100"
  >
    <svg
      class="cursor-pointer"
      data-testid="close-button"
      fill="none"
      height="24"
      viewBox="0 0 20 20"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5.33317 15.8334L4.1665 14.6667L8.83317 10.0001L4.1665 5.33341L5.33317 4.16675L9.99984 8.83341L14.6665 4.16675L15.8332 5.33341L11.1665 10.0001L15.8332 14.6667L14.6665 15.8334L9.99984 11.1667L5.33317 15.8334Z"
        fill="currentColor"
      />
    </svg>
    <p
      class="text-xs"
    >
      Snapshot default alert
    </p>
  </div>
</DocumentFragment>
`;

exports[`Alert Alert snapshot Matches snapshot with error variant and custom classes 1`] = `
<DocumentFragment>
  <div
    class="w-full items-center gap-3 rounded flex transition-all duration-300 ease-in-out bg-error1 text-error5 custom-class my-0 max-h-0 overflow-hidden p-0 opacity-0"
  >
    <svg
      class="cursor-pointer"
      data-testid="close-button"
      fill="none"
      height="24"
      viewBox="0 0 20 20"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5.33317 15.8334L4.1665 14.6667L8.83317 10.0001L4.1665 5.33341L5.33317 4.16675L9.99984 8.83341L14.6665 4.16675L15.8332 5.33341L11.1665 10.0001L15.8332 14.6667L14.6665 15.8334L9.99984 11.1667L5.33317 15.8334Z"
        fill="currentColor"
      />
    </svg>
    <p
      class="text-xs custom-text"
    >
      Snapshot error alert
    </p>
  </div>
</DocumentFragment>
`;

exports[`Alert Alert snapshot Matches snapshot with success variant and custom classes 1`] = `
<DocumentFragment>
  <div
    class="w-full items-center gap-3 rounded p-1 flex transition-all duration-300 ease-in-out bg-green1 text-green8 custom-class max-h-[60px] opacity-100"
  >
    <svg
      class="cursor-pointer"
      data-testid="close-button"
      fill="none"
      height="24"
      viewBox="0 0 20 20"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M5.33317 15.8334L4.1665 14.6667L8.83317 10.0001L4.1665 5.33341L5.33317 4.16675L9.99984 8.83341L14.6665 4.16675L15.8332 5.33341L11.1665 10.0001L15.8332 14.6667L14.6665 15.8334L9.99984 11.1667L5.33317 15.8334Z"
        fill="currentColor"
      />
    </svg>
    <p
      class="text-xs custom-text"
    >
      Snapshot success alert
    </p>
  </div>
</DocumentFragment>
`;
